--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,11 @@
-pyrogram
-Tgcrypto
- 
+pyrogram==2.0.80
+TgCrypto
+motor
+dnspython
+hachoir
+Pillow
+aiohttp
+pytz
+humanize
+pyromod
+ffmpeg-python
